# demo-bazel-monorepo

docs/: agents.md  temporal-workflows.md
services/agents/: BUILD.bazel  context.ts  index.ts  middleware.ts  orchestrator.ts  registry.ts
workflows/: BUILD.bazel  activities.go  order_workflow.go  order_workflow_test.go  payment_workflow.go  payment_workflow_test.go  security_scan_workflow.go  security_scan_workflow_test.go  worker.go
